--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PaygentForce | Intelligent Payment Collection</title>
+    <link rel="icon" href="./favicon.ico">
     <style>
         :root {
             --color-background: #f8fafc;
