--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PaygentForce | Intelligent Payment Collection</title>
+    <title>PaygentForce | Slack-powered Payments framework for Agentforce</title>
     <link rel="icon" href="./favicon.ico">
     <style>
         :root {
