--- a/index.html
+++ b/index.html
@@ -244,15 +244,9 @@
                 you.
             </div>
             <div style="display: flex; flex-direction: row;">
-                <img src="./a2a.png"
-                width="500rem"
-                height="auto"
-                style="object-fit: cover;"
+                <img src="./a2a.png" width="500rem" height="auto" style="object-fit: cover;"
                     alt="Architecture diagram showing PaygentForce connecting Slack, Salesforce, Stripe, and AP2 protocol" />
-                <img src="./ap2.png"
-                width="500rem"
-                height="auto"
-                        style="object-fit: contain;"
+                <img src="./ap2.png" width="500rem" height="auto" style="object-fit: contain;"
                     alt="Architecture diagram showing PaygentForce connecting Slack, Salesforce, Stripe, and AP2 protocol" />
             </div>
 
@@ -280,6 +274,7 @@
                     <ul>
 
                         <li><strong>Slack -</strong> Trigger payments for any transaction.</li>
+                        <li><strong>AgentForce -</strong> Used as Salesforce AI engine for automated payments.</li>
                         <li><strong>A2A -</strong> Used for Agentforce to Payment Agent communication.</li>
                         <li><strong>AP2 -</strong> Used for triggering payments in an A2A scenario.</li>
                         <li><strong>Heroku -</strong> Middleware for data and actions.</li>
