--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <p>
                         PaygentForce is 100% native to Salesforce - built on Slack, Agentforce, Salesforce core and
                         Heroku.
-                        It archives standardisation and flexibility by following the latest AI Agent standards defined
+                        It achieves standardisation and flexibility by following the latest AI Agent standards defined
                         by
                         Google and adopted by Salesforce
                     </p>
