--- a/index.html
+++ b/index.html
@@ -242,6 +242,13 @@
                 A simple scenario - an invoice is due for collection and you want Agentforce to collect it - it
                 could be from a payment agent such as Stripe, Chargent, Adyen - let PaygentForce handle that for
                 you.
+<br> <br>
+                We strongly believe that this is the first ever Agentforce integration with AP2 anywhere globally and it could be the baseline framework for building any sort of payment solutions on Agentforce. AP2 uses the concept of mandates —tamper-proof, cryptographically-signed digital contracts that serve as verifiable proof of a user's instructions and we've demonstrated how our solution Paygentforce supports mandates.
+
+The possibilities of Paygentforce are truly exciting
+
+* Commerce - Automated agents monitors prices and availability and automatically executes a secure purchase the moment that specific variant is found
+* Financial Services - Automated agents doing payments via mandates eliminating human intervention & MANY MORE!
             </div>
             <div style="display: flex; flex-direction: row;">
                 <img src="./a2a.png" width="500rem" height="auto" style="object-fit: cover;"
