--- a/index.html
+++ b/index.html
@@ -210,6 +210,74 @@
                 text-align: center;
             }
         }
+
+        /* Popup Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 999;
+            inset: 0;
+            background-color: rgba(0, 0, 0, 0.55);
+            backdrop-filter: blur(4px);
+            justify-content: center;
+            align-items: center;
+            animation: fadeIn 0.4s ease;
+        }
+
+        .modal-content {
+            position: relative;
+            background: #ffffff;
+            padding: 1rem;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            max-width: 90%;
+            width: 900px;
+            text-align: center;
+            animation: scaleUp 0.4s ease;
+        }
+
+        .modal-content img {
+            width: 100%;
+            height: auto;
+            border-radius: 14px;
+        }
+
+        .modal .close {
+            position: absolute;
+            top: 8px;
+            right: 40px;
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #aaa;
+            cursor: pointer;
+            transition: color 0.2s;
+        }
+
+        .modal .close:hover {
+            color: var(--color-primary);
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes scaleUp {
+            from {
+                transform: scale(0.9);
+                opacity: 0;
+            }
+
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
     </style>
 </head>
 
@@ -221,6 +289,15 @@
             </h1>
         </div>
     </header>
+
+    <!-- Popup Modal -->
+    <div id="welcomeModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <img src="./banner-img.png" alt="Welcome to PaygentForce" />
+        </div>
+    </div>
+
 
     <main>
         <section>
@@ -242,18 +319,23 @@
                 A simple scenario - an invoice is due for collection and you want Agentforce to collect it - it
                 could be from a payment agent such as Stripe, Chargent, Adyen - let PaygentForce handle that for
                 you.
-<br> <br>
-                We strongly believe that this is the first ever Agentforce integration with AP2 anywhere globally and it could be the baseline framework for building any sort of payment solutions on Agentforce. AP2 uses the concept of mandates —tamper-proof, cryptographically-signed digital contracts that serve as verifiable proof of a user's instructions and we've demonstrated how our solution Paygentforce supports mandates.
-<br>
+                <br> <br>
+                We strongly believe that this is the first ever Agentforce integration with AP2 anywhere globally and it
+                could be the baseline framework for building any sort of payment solutions on Agentforce. AP2 uses the
+                concept of mandates —tamper-proof, cryptographically-signed digital contracts that serve as verifiable
+                proof of a user's instructions and we've demonstrated how our solution Paygentforce supports mandates.
+                <br>
                 The possibilities of Paygentforce are truly exciting
-<ul>
-    <li>
-        <strong>Commerce -</strong> Automated agents monitors prices and availability and automatically executes a secure purchase the moment that specific variant is found
-    </li>
-    <li>
-        <strong>Financial Services -</strong>Automated agents doing payments via mandates eliminating human intervention & MANY MORE!
-    </li>
-</ul>
+                <ul>
+                    <li>
+                        <strong>Commerce -</strong> Automated agents monitors prices and availability and automatically
+                        executes a secure purchase the moment that specific variant is found
+                    </li>
+                    <li>
+                        <strong>Financial Services -</strong>Automated agents doing payments via mandates eliminating
+                        human intervention & MANY MORE!
+                    </li>
+                </ul>
             </div>
             <div style="display: flex; flex-direction: row;">
                 <img src="./a2a.png" width="500rem" height="auto" style="object-fit: cover;"
@@ -369,6 +451,26 @@
 
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
+
+        window.addEventListener("load", function () {
+            const modal = document.getElementById("welcomeModal");
+            const closeBtn = document.querySelector(".modal .close");
+
+            // Show modal when page loads
+            modal.style.display = "flex";
+
+            // Close modal on click of X
+            closeBtn.addEventListener("click", () => {
+                modal.style.display = "none";
+            });
+
+            // Close modal when user clicks outside the image
+            modal.addEventListener("click", (e) => {
+                if (e.target === modal) {
+                    modal.style.display = "none";
+                }
+            });
+        });
     </script>
 </body>
 
